Add layout to owners list page. Closes #13

--- a/web/src/main/resources/templates/fragments/layout.html
+++ b/web/src/main/resources/templates/fragments/layout.html
@@ -3,8 +3,8 @@
 
 <head>
 
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -50,7 +50,7 @@
                     <span>Home</span>
                 </li>
 
-                <li th:replace="::menuItem ('/owners/find','owners','find owners','search','Find owners')">
+                <li th:replace="::menuItem ('/owners','owners','find owners','search','Find owners')">
                     <span class="fa fa-search" aria-hidden="true"></span>
                     <span>Find owners</span>
                 </li>
