--- a/web/src/main/resources/templates/owners/index.html
+++ b/web/src/main/resources/templates/owners/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="https://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'home')}">
+<html xmlns:th="https://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
 <body>
 <h2 th:text="#{owners.title}">Pet Owners</h2>
 <table class="table table-striped">
