--- a/web/src/main/resources/templates/vets/index.html
+++ b/web/src/main/resources/templates/vets/index.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Vets</title>
-</head>
+<html xmlns:th="https://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'vets')}">
 <body>
-<h1>Vets List</h1>
-<table>
+<h2 th:text="#{vets.title}">Vets List</h2>
+<table class="table table-striped">
     <thead>
     <tr>
-        <th>ID</th>
-        <th>Name</th>
-        <th>Lastname</th>
+        <th th:text="#{id}">ID</th>
+        <th th:text="#{name}">Name</th>
+        <th th:text="#{lastName}">Lastname</th>
     </tr>
     </thead>
     <tbod>
